force-app/main/default/objects/copado__Team_Member__c/copado__Team_Member__c.object-meta.xml
<CustomObject>
    <label>Team Member</label>
    <nameField>
        <displayFormat>TM-{0000}</displayFormat>
        <label>Team Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>