force-app/main/default/objects/copado__Team_Member__c/fields/copado__Member__c.field-meta.xml
<CustomField>
    <fullName>copado__Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Team_Members</relationshipName>
    <type>Lookup</type>
</CustomField>