force-app/main/default/objects/copado__Team_Member__c/fields/copado__Role__c.field-meta.xml
<CustomField>
    <fullName>copado__Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Analyst</fullName>
            </value>
            <value>
                <fullName>Architect</fullName>
            </value>
            <value>
                <fullName>BSA</fullName>
            </value>
            <value>
                <fullName>Business Owner</fullName>
            </value>
            <value>
                <fullName>Capacity Planner</fullName>
            </value>
            <value>
                <fullName>Data Center Engineer</fullName>
            </value>
            <value>
                <fullName>DBA</fullName>
            </value>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>Dev Manager</fullName>
            </value>
            <value>
                <fullName>Doc Editor</fullName>
            </value>
            <value>
                <fullName>Doc Manager</fullName>
            </value>
            <value>
                <fullName>Network Engineer</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Performance Engineer</fullName>
            </value>
            <value>
                <fullName>Product Owner</fullName>
            </value>
            <value>
                <fullName>Program Manager</fullName>
            </value>
            <value>
                <fullName>Provisioning Specialist / Asset Manager</fullName>
            </value>
            <value>
                <fullName>QA Engineer</fullName>
            </value>
            <value>
                <fullName>QA Manager</fullName>
            </value>
            <value>
                <fullName>Release Engineer</fullName>
            </value>
            <value>
                <fullName>Release Manager</fullName>
            </value>
            <value>
                <fullName>Scrum Master</fullName>
            </value>
            <value>
                <fullName>Security Engineer</fullName>
            </value>
            <value>
                <fullName>Site Reliability Engineer</fullName>
            </value>
            <value>
                <fullName>SysAdmin</fullName>
            </value>
            <value>
                <fullName>SysAdmin Linux</fullName>
            </value>
            <value>
                <fullName>SysAdmin Storage</fullName>
            </value>
            <value>
                <fullName>SysAdmin Win</fullName>
            </value>
            <value>
                <fullName>Technical Writer</fullName>
            </value>
            <value>
                <fullName>TechOps Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>